--- a/MauiAppSample/MauiAppSample.csproj
+++ b/MauiAppSample/MauiAppSample.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net6.0-android33.0</TargetFrameworks>
+		<TargetFrameworks>net8.0-android</TargetFrameworks>
 		<OutputType>Exe</OutputType>
 		<RootNamespace>MauiAppSample</RootNamespace>
 		<UseMaui>true</UseMaui>
@@ -46,11 +46,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="ReactiveUI" Version="16.2.6" />
-	  <PackageReference Include="ReactiveUI.Fody" Version="16.2.6" />
-	  <PackageReference Include="ReactiveUI.Maui" Version="16.2.6" />
-	  <PackageReference Include="Serilog.Sinks.Debug" Version="2.0.0" />
-	  <PackageReference Include="Splat.Serilog" Version="14.4.1" />
+	  <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.70" />
+	  <PackageReference Include="ReactiveUI" Version="20.1.1" />
+	  <PackageReference Include="ReactiveUI.Fody" Version="19.5.41" />
+	  <PackageReference Include="ReactiveUI.Maui" Version="20.1.1" />
+	  <PackageReference Include="Serilog.Sinks.Debug" Version="3.0.0" />
+	  <PackageReference Include="Splat.Serilog" Version="15.1.1" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -63,6 +64,10 @@
 	  <MauiXaml Update="Views\LocationViewCell.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Update="Microsoft.Maui.Controls.Compatibility" Version="8.0.70" />
 	</ItemGroup>
 
 </Project>
